--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <body>
 
     <ul class="body__list">
-        <li><a href="Task_01.html" >Task_1</a></li>
-        <li><a href="Task_02.html">Task_2</a></li>
-        <li><a href="Task_03.html">Task_3</a></li>
-        <li><a href="Task_04.html">Task_4</a></li>
-        <li><a href="Task_05.html">Task_5</a></li>
-        <li><a href="Task_06.html">Task_6</a></li>
-        <li><a href="Task_07.html">Task_7</a></li>
-        <li><a href="Task_08.html">Task_8</a></li>
-        <li><a href="Task_09.html">Task_9</a></li>
-        <li><a href="Task_10.html">Task_10</a></li>
+        <li class="body__list--item"><a href="Task_01.html" >Task_1</a></li>
+        <li class="body__list--item"><a href="Task_02.html">Task_2</a></li>
+        <li class="body__list--item"><a href="Task_03.html">Task_3</a></li>
+        <li class="body__list--item"><a href="Task_04.html">Task_4</a></li>
+        <li class="body__list--item"><a href="Task_05.html">Task_5</a></li>
+        <li class="body__list--item"><a href="Task_06.html">Task_6</a></li>
+        <li class="body__list--item"><a href="Task_07.html">Task_7</a></li>
+        <li class="body__list--item"><a href="Task_08.html">Task_8</a></li>
+        <li class="body__list--item"><a href="Task_09.html">Task_9</a></li>
+        <li class="body__list--item"><a href="Task_10.html">Task_10</a></li>
     </ul>
 
 </body>
