--- a/Task_03.html
+++ b/Task_03.html
@@ -5,24 +5,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task_02</title>
+    <title>Task_03</title>
 
-    <link rel="stylesheet" href="CSS/styles.css" />
-
-    <style>
-        .item:not(:last-child) {
-            margin-bottom: 8px;
-        }
-    </style>
-
+    <link rel="stylesheet" href="CSS/styles.css" />    
 </head>
 
 <body>
     <p><a href="index.html">Go back</a></p>
 
-    <ul id="ingredients"></ul>
+    <ul class="gallery"></ul>
 
-    <script src="JS/Task_02.js" type="module"></script>
+    <script src="JS/Task_03.js" type="module"></script>
 </body>
 
 </html>
