--- a/Task_04.html
+++ b/Task_04.html
@@ -5,24 +5,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task_02</title>
+    <title>Task_04</title>
 
     <link rel="stylesheet" href="CSS/styles.css" />
-
-    <style>
-        .item:not(:last-child) {
-            margin-bottom: 8px;
-        }
-    </style>
-
 </head>
 
 <body>
     <p><a href="index.html">Go back</a></p>
 
-    <ul id="ingredients"></ul>
+    <div id="counter">
+        <button type="button" data-action="decrement">-1</button>
+        <span id="value">0</span>
+        <button type="button" data-action="increment">+1</button>
+    </div>
 
-    <script src="JS/Task_02.js" type="module"></script>
+    <script src="JS/Task_04.js" type="module"></script>
 </body>
 
 </html>
