--- a/Task_05.html
+++ b/Task_05.html
@@ -5,24 +5,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task_02</title>
+    <title>Task_05</title>
 
     <link rel="stylesheet" href="CSS/styles.css" />
-
-    <style>
-        .item:not(:last-child) {
-            margin-bottom: 8px;
-        }
-    </style>
-
 </head>
 
 <body>
     <p><a href="index.html">Go back</a></p>
 
-    <ul id="ingredients"></ul>
+    <input type="text" id="name-input" placeholder="Please enter your name" />
+    <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
 
-    <script src="JS/Task_02.js" type="module"></script>
+    <script src="JS/Task_05.js" type="module"></script>
 </body>
 
 </html>
